# Redkeds

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
scripts/: set_environment.ps1  set_environment.sh  set_environment2.ps1
scripts/load_cities/: req.txt  setup.py  spisok.xlsx
scripts/load_media/: setup.py
src/app/: config.py  exception_handlers.py  ioc.py  logs.py  main.py
src/app/adapters/: database.py  exceptions.py  file_manager.py  id_provider.py  mappers.py  models.py  password.py  transaction.py
src/app/adapters/gateways/: channel.py  chat.py  city.py  communication_method.py  like.py  showcase.py  skip.py  specialization.py  tag.py  user.py
src/app/adapters/migrations/: env.py
src/app/adapters/migrations/versions/: 2fb481982778_add_cities.py  316b774465e2_initial.py  6d1df0491e73_изменение_некоторых_полей.py  728a21df545f_make_nick_unique.py  84716f24e2ad_initial_commit.py  8f1b459bbdc2_add_all_models.py  ab1c6729bb76_добавил_email_и_nickname.py  c7b6c878e44d_initial.py  ca44e5cd39e8_initial.py  dd2db88331cf_add_likes_table.py  df737bc5de97_add_type_name_display.py  e299ef593f38_initial.py  ed479559c007_add_id_to_likes.py  ee90f13273f5_add_cascade_delete_in_showcase.py  f3f6cf951daa_add_works.py
src/app/application/dto/: channel.py  chat.py  city.py  communication_method.py  like.py  showcase.py  skip.py  specialization.py  tag.py  user.py  work.py
src/app/application/interactors/channel/: read.py
src/app/application/interactors/chat/: create.py  delete.py  read.py
src/app/application/interactors/city/: read.py
src/app/application/interactors/communication_method/: read.py
src/app/application/interactors/file/: read.py
src/app/application/interactors/like/: add_like.py  delete_like.py
src/app/application/interactors/recommendation_feed/: read.py
src/app/application/interactors/showcase/: create.py  delete.py
src/app/application/interactors/skip/: add_skip.py  delete_skip.py
src/app/application/interactors/specialization/: read.py
src/app/application/interactors/tag/: read.py
src/app/application/interactors/user/: auth.py  delete.py  read.py  register.py  unique_login.py  update.py
src/app/application/interactors/work/: create.py  delete.py  read.py  update.py
src/app/application/interfaces/channel/: channel_gateway.py
src/app/application/interfaces/chat/: chat_gateway.py  chat_message_gateway.py
src/app/application/interfaces/city/: city_gateway.py
src/app/application/interfaces/common/: file_gateway.py  id_provider.py  transaction.py  uuid_generator.py
src/app/application/interfaces/communication_method/: communication_method_gateway.py
src/app/application/interfaces/like/: like_gateway.py  like_geteway.py
src/app/application/interfaces/showcase/: showcase_gateway.py  work_gateway.py
src/app/application/interfaces/skip/: skip_gateway.py
src/app/application/interfaces/specialization/: specialization_gateway.py
src/app/application/interfaces/tag/: tag_gateway.py
src/app/application/interfaces/user/: default_photo_gateway.py  user_gateway.py
src/app/domain/: exceptions.py
src/app/domain/entities/: channel.py  chat.py  communication_method.py  like.py  showcase.py  skip.py  specialization.py  tag.py  user.py
src/app/domain/services/: chat_service.py  like_service.py  password.py  showcase.py  skip_service.py  work_service.py
src/app/presentation/routers/: admin_panel.py  auth.py  channels.py  chat.py  city.py  communication_method.py  feed.py  file.py  like.py  messages.py  showcase.py  skip.py  specialization.py  tag.py  user.py  work.py
src/redkeds/: __init__.py  ioc.py  main.py
src/redkeds/adapters/: file_manager.py  id_provider.py  mappers.py  models.py  password.py  transaction.py
src/redkeds/adapters/gateways/: chat.py  city.py  communication_method.py  like.py  showcase.py  skip.py  specialization.py  tag.py  user.py
src/redkeds/adapters/migrations/: env.py
src/redkeds/adapters/migrations/versions/: 5828d843eecd_add_default_photos.py
src/redkeds/application/dto/: chat.py  city.py  communication_method.py  showcase.py  specialization.py  tag.py  user.py  work.py
src/redkeds/application/interactors/chat/: create.py  delete.py  read.py
src/redkeds/application/interactors/city/: read.py
src/redkeds/application/interactors/communication_method/: read.py
src/redkeds/application/interactors/file/: read.py
src/redkeds/application/interactors/like/: add_like.py  delete_like.py
src/redkeds/application/interactors/recommendation_feed/: read.py
src/redkeds/application/interactors/skip/: add_skip.py  delete_skip.py
src/redkeds/application/interactors/specialization/: read.py
src/redkeds/application/interactors/tag/: read.py
src/redkeds/application/interactors/user/: auth.py  delete.py  read.py  register.py  update.py
src/redkeds/application/interactors/work/: create.py  delete.py  read.py  update.py
src/redkeds/application/interfaces/chat/: chat_gateway.py  chat_message_gateway.py
src/redkeds/application/interfaces/city/: city_gateway.py
src/redkeds/application/interfaces/common/: file_gateway.py  id_provider.py  transaction.py  uuid_generator.py
src/redkeds/application/interfaces/like/: like_gateway.py
src/redkeds/domain/: exceptions.py
src/redkeds/domain/entities/: city.py  communication_method.py  file_id.py  showcase.py  skip.py  tag.py
src/redkeds/domain/services/: chat_service.py  like_service.py  password.py  skip_service.py  work_service.py
src/redkeds/main/: ioc.py  main.py
src/redkeds/main/ioc/: config.py  interactors.py  interfaces.py
src/redkeds/presentation/: exception_handlers.py
src/redkeds/presentation/routers/: admin_panel.py  auth.py  chat.py  city.py  communication_method.py  feed.py  file.py  like.py  messages.py  skip.py  specialization.py  tag.py  user.py  work.py
tests/: conftest.py  factories.py
tests/user/: test_auth.py  test_delete.py  test_invariant.py  test_update.py
(+17 files in other folders)
