[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aliaksei Yafremau", email = "aleksey.yafremau@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dishka>=1.6.0",
    "fastapi>=0.115.13",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest-asyncio>=1.0.0",
]
lint = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
exclude = [
	# Игнорировать папку "tests" и все её подпапки
	"^tests/",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # Не нужно писать docstring для модулей
    "D104", # Не нужно писать docstring для пакетов
    "D107", # Не нужно писать docstring для __init__()
    "D213", # Не нужно начинать docstring с второй строки
    "D203", # Не нужно писать docstring с первой строки
    "S101", # Возможность использования assert
    "EM101", # Возможность использования строки при вызове ошибки
    "PLR2004", # Возможность использования "magic" значений
    "RUF001", # Игнорирование неоднозначных символов в строке
    "RUF002", # Игнорирование неоднозначных символов в docstring
    "RUF003", # Игнорирование неоднозначных символов в коментарии
    "COM812", # Не нужно писать запятую в конце списка
    "TRY003", # Возможность писать сообщение в ошибке
    "S106", # Возможность hardcode пароль для тестовых реализаций
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103"] # Для тестов необязательно прописывать docstrings 
